--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,8 @@
     <script src="//127.0.0.1:3000/static/playground-full.js"></script>
     <script src="//127.0.0.1:3000/static/snippets.js"></script>
 
+		<title>The upper-db tour</title>
+
     <script>
     goPlaygroundOptions({
       'shareRedirect': '//127.0.0.1:3000/p/',
@@ -22,7 +24,7 @@
 	</head>
 	<body>
 		<section id="header">
-			<h1>The upper.io/db.v3 tour</h1>
+			<h1>The upper-db tour</h1>
 			<ul id="controls">
 				<li><a href="#">Previous</a></li>
 				<li><a href="#">Home</a></li>
