--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
 <html>
 	<head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <link href="//fonts.googleapis.com/css?family=Raleway:500,700|Source+Serif+Pro:400,700|Source+Code+Pro:400,600" rel="stylesheet" type="text/css" />
+
 		<link type="text/css" rel="stylesheet" href="/static/css/main.css">
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -7,46 +12,89 @@
     <link href="//127.0.0.1:3000/static/example.css" rel="stylesheet" type="text/css" />
     <link href="//127.0.0.1:3000/static/codemirror.css" rel="stylesheet" type="text/css" />
 
+    <link href="//upper.io/db.v3/css/style.css" rel="stylesheet">
+    <link href="//upper.io/db.v3/css/syntax.css" rel="stylesheet">
+    <link href="//upper.io/db.v3/css/upper.css" rel="stylesheet">
+
     <script src="//127.0.0.1:3000/static/playground-full.js"></script>
     <script src="//127.0.0.1:3000/static/snippets.js"></script>
+
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="//upper.io/db.v3/apple-touch-icon-precomposed.png">
+    <link rel="shortcut icon" href="//upper.io/db.v3/favicon.ico">
 
 		<title>The upper-db tour</title>
 
     <script>
     goPlaygroundOptions({
-      'shareRedirect': '//127.0.0.1:3000/p/',
-      'shareURL': '//127.0.0.1:3000/share',
-      'compileURL': '//127.0.0.1:3000/compile',
-      'fmtURL': '//127.0.0.1:3000/fmt',
+      'shareRedirect': 'https://demo.upper.io/p/',
+      'shareURL': 'https://demo.upper.io/share',
+      'compileURL': 'https://demo.upper.io/compile',
+      'fmtURL': 'https://demo.upper.io/fmt',
       'shareOpenNewWindow': true
     });
     </script>
 	</head>
 	<body>
-		<section id="header">
-			<h1>The upper-db tour</h1>
-			<ul id="controls">
-				<li><a href="#">Previous</a></li>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Next</a></li>
-			</ul>
-		</section>
-		<section id="content" class="columns">
-			<div class="column readme">
-				<div class="content">{{.Readme}}</div>
-			</div>
-			<div class="column exercise">
-				<div class="content">
-					<textarea class="go-playground-snippet" data-expanded="1">{{.Exercise}}</textarea>
-				</div>
-			</div>
-		</section>
-		<section id="footer">
+    <header class="main-header">
+      <nav class="nav--main">
+        <div class="nav--sections">
+					<ul class="breadcrumb">
+						<li><a href="/db.v3/">Home</a></li>
+						<li><a href="/db.v3/tour">Tour</a></li>
+					</ul>
+        </div>
+        <div class="nav--adapters">
+          <span class="nav__trigger--adapters" id="adapters-menu-trigger">upper.io</span>
+          <ul id="adapters-menu">
+            <li><a href="//upper.io/db.v3">Documentation</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="tour">
+      <div>
+				<div class="grid-2">
+
+          <div class="feature">
+            <ul class="tour-nav">
+              {{ if .Prev }}
+                <li class="prev"><a href="/{{ .Prev }}">&lt;</a></li>
+              {{ end }}
+              <li class="pager">{{ .Current }}/{{ .Total }}</li>
+              {{ if .Next }}
+                <li class="next"><a href="/{{ .Next }}">&gt;</a></li>
+              {{ end }}
+            </ul>
+            <div class="content">
+              {{.Readme}}
+            </div>
+            <ul class="tour-nav">
+              {{ if .Prev }}
+                <li class="prev"><a href="/{{ .Prev }}">&lt;</a></li>
+              {{ end }}
+              <li class="pager">{{ .Current }}/{{ .Total }}</li>
+              {{ if .Next }}
+                <li class="next"><a href="/{{ .Next }}">&gt;</a></li>
+              {{ end }}
+            </ul>
+          </div>
+          <div class="feature">
+            <div class="content code-snippet">
+              <textarea class="go-playground-snippet" data-expanded="1">{{.Exercise}}</textarea>
+            </div>
+          </div>
+
+        </div>
+      </div>
+		</main>
+
+    <footer class='footer'>
       <small>
-        Made with <span class='heart'>❤</span> at
+        Made with <span class='hearth'>❤</span> at
         <a href='https://mazing.studio' target='_blank'>mazing.studio</a>
         © 2017
       </small>
-		</section>
+    </footer>
+
 	</body>
 </html>
