--- a/static/index.html
+++ b/static/index.html
@@ -41,8 +41,7 @@
       <nav class="nav--main">
         <div class="nav--sections">
 					<ul class="breadcrumb">
-						<li><a href="/db.v3/">Home</a></li>
-						<li><a href="/">Tour</a></li>
+						<li><a href="/">Home</a></li>
 					</ul>
         </div>
         <div class="nav--adapters">
