--- a/static/index.html
+++ b/static/index.html
@@ -48,6 +48,8 @@
           <span class="nav__trigger--adapters" id="adapters-menu-trigger">upper.io</span>
           <ul id="adapters-menu">
             <li><a href="//upper.io/db.v3">Documentation</a></li>
+            <li><a href="//upper.io/db.v3/adapters">Adapters</a></li>
+            <li><a href="//godoc.org/upper.io/db.v3">Reference</a></li>
           </ul>
         </div>
       </nav>
